--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Angel Solutions Labs</title>
+		!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -15,6 +17,7 @@
     		<div class="blurb">
         		<h1>Watchsted and education data and inspections, oh my! </h1>
 				<p>Check the blog for all the things.</p>
+				<p>Initial build based on <a href="http://jmcglone.com/guides/github-pages/">theis nifty tutorial.
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
