--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     		<div class="blurb">
         		<h1>Watchsted and education data and inspections, oh my! </h1>
 				<p>Check the blog for all the things.</p>
-				<p>Initial build based on <a href="http://jmcglone.com/guides/github-pages/">theis nifty tutorial.
+				<p>Initial build based on <a href="http://jmcglone.com/guides/github-pages/">this nifty tutorial.
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
