Image changes/deletions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Angel Solutions Labs
+title: Angel Solutions Labssss
 description: "Education, technology and business"
 headline: Education, technology and business
 tags: [Angel, Education, Data, Liverpool]
