style and text tweaks

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Angel Solutions Labssss
+title: Big Data Blog
 description: "Education, technology and business"
 headline: Education, technology and business
 tags: [Angel, Education, Data, Liverpool]
