--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
 title: Big Data Blog
-description: "Education, technology and business"
-headline: Education, technology and business
+description: "The Big Data Blog From Angel Solutions"
+headline: The Big Data Blog From Angel Solutions
 tags: [Angel, Education, Data, Liverpool]
 ---
 {% if site.paginate %}
